--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "langchain-core>=1.2.9",
     "langchain-ollama>=1.0.1",
     "langgraph>=1.0.8",
+    "langgraph-checkpoint-sqlite>=3.0.3",
     "streamlit>=1.54.0",
 ]
