--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "langchain-ollama>=1.0.1",
     "langgraph>=1.0.8",
     "langgraph-checkpoint-sqlite>=3.0.3",
+    "python-dotenv>=1.2.1",
     "streamlit>=1.54.0",
 ]
