--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ddgs>=9.10.0",
     "langchain-community>=0.4.1",
     "langchain-core>=1.2.9",
     "langchain-ollama>=1.0.1",
